force-app/main/default/objects/MIP_Rebate_Payout__mdt/MIP_Rebate_Payout__mdt.object-meta.xml
<CustomObject>
    <label>MIP Rebate Payout %</label>
    <pluralLabel>MIP Rebate Payout %</pluralLabel>
</CustomObject>