force-app/main/default/objects/MIP_Rebate_Payout__mdt/fields/Rebate_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Milestone__c</fullName>
    <label>Rebate Milestone %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>