force-app/main/default/objects/MIP_Rebate_Payout__mdt/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <label>Total Bookings %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>