force-app/main/default/objects/MIP_Rebate_Payout__mdt/listViews/Rebate_Payout.listView-meta.xml
<ListView>
    <fullName>Rebate_Payout</fullName>
    <columns>MasterLabel</columns>
    <columns>Rebate_Type__c</columns>
    <columns>PSNL_Bookings__c</columns>
    <columns>Rebate_Milestone__c</columns>
    <columns>Total_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rebate Payout</label>
</ListView>